include(cc_library)

cc_library(
  NAME
    common_layers
  HDRS
    qwen2_attention.h
    qwen2_vision_attention.h
    rms_norm.h
    rotary_embedding.h
    rotary_embedding_util.h
    fused_moe.h
    dense_mlp.h
    linear.h
    word_embedding_impl.h
    indexer.h
    deep_ep.h
    activation.h
    attention_metadata.h
    dp_utils.h
  SRCS
    qwen2_attention.cpp
    qwen2_vision_attention.cpp
    rms_norm.cpp
    rotary_embedding.cpp
    rotary_embedding_util.cpp
    fused_moe.cpp
    dense_mlp.cpp
    linear.cpp
    word_embedding_impl.cpp
    indexer.cpp
    deep_ep.cpp
    activation.cpp
    attention_metadata.cpp
    dp_utils.cpp
  DEPS
    "-Wl,--whole-archive"
    "-Wl,--no-whole-archive"
    :kv_cache
    :prefix_cache
    :block
    :parallel_state
    :state_dict
    :model
    :kernels
    glog::glog
    gflags::gflags
    torch
    :platform
    $<$<BOOL:${USE_MLU}>:mlu_layers>
    $<$<BOOL:${USE_CUDA}>:cuda_layers>
    $<$<BOOL:${USE_ILU}>:ilu_layers>
    $<$<BOOL:${USE_NPU}>:npu_torch_layers>
)

add_subdirectory(tests)